poziomy zaawansowania w konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3339 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³ migration migruje wszystkie pliki konfiguracyjne do pliku kadu.conf.xml (adrian)
 * poprawka segfaulta w module voice gdy karta muzyczna byla zajeta (pawel_p)
 * zapisywanie wersji Qt, GCC, Kadu i czasu kompilacji do pliku backtrace (joi)
+* poziomy zaawansowania w konfiguracji (vogel/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
