--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka segfaulta w module voice gdy karta muzyczna byla zajeta (pawel_p)
 * zapisywanie wersji Qt, GCC, Kadu i czasu kompilacji do pliku backtrace (joi)
 * poziomy zaawansowania w konfiguracji (vogel/joi)
+* poprawa mechanizmów okna konfiguracji w celu lepszej wspó³pracy z poziomami
+  zaawansowania; aktualizacja poziomów zaawansowania w core i w modu³ach (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
