okno aktualizacji inf. o kontakcie nie znika przy błędzie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3342 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poziomy zaawansowania w konfiguracji (vogel/joi)
 * poprawa mechanizmów okna konfiguracji w celu lepszej wspó³pracy z poziomami
   zaawansowania; aktualizacja poziomów zaawansowania w core i w modu³ach (joi)
+* okno zmiany danych o kontakcie nie znika gdy wci¶niemy "Uaktualnij",
+  a w jakim¶ polu wpisane s± b³êdne dane (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
