--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ osdhints_notify (joi)
 * poprawka dla proxy w HttpClient (michal)
 * poprawka segfaulta w module voice gdy karta muzyczna byla zajeta (pawel_p)
+* okno zmiany danych o kontakcie nie znika gdy wci¶niemy "Uaktualnij",
+  a w jakim¶ polu wpisane s± b³êdne dane (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
