animowana ikona nadejścia wiadomości
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3346 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zaawansowania; aktualizacja poziomów zaawansowania w core i w modu³ach (joi)
 * okno zmiany danych o kontakcie nie znika gdy wci¶niemy "Uaktualnij",
   a w jakim¶ polu wpisane s± b³êdne dane (joi)
+* animowana ikona przy nadej¶ciu wiadomo¶ci, grafika by SadMephisto & Arcisz (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
