--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka segfaulta w module voice gdy karta muzyczna byla zajeta (pawel_p)
 * okno zmiany danych o kontakcie nie znika gdy wci¶niemy "Uaktualnij",
   a w jakim¶ polu wpisane s± b³êdne dane (joi)
+* aktualizacja libgadu do wersji 20050627 (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
