--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * emotikony i obrazki obni¿one o 2 piskele w dó³ dla lepszego wy¶rodkowania (joi)
 * porzadki w includeach - szybsza kompilacja (pawel_p)
 * aktualizacja libgadu do wersji 20050627 (joi)
+* u³atwiacze dla kompilacji na MacOSX - opcje configure --without-png-checking,
+  --enable-macosx, poprawiona kolejno¶æ opcji budowania ze statycznym Qt (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
