ułatwiacze dla macosx, cz.2
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3365 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okno zmiany danych o kontakcie nie znika gdy wci¶niemy "Uaktualnij",
   a w jakim¶ polu wpisane s± b³êdne dane (joi)
 * aktualizacja libgadu do wersji 20050627 (joi)
+* u³atwiacze dla kompilacji na MacOSX - opcje configure --without-png-checking,
+  --enable-macosx, poprawiona kolejno¶æ opcji budowania ze statycznym Qt (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
