--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * aktualizacja libgadu do wersji 20050627 (joi)
 * u³atwiacze dla kompilacji na MacOSX - opcje configure --without-png-checking,
   --enable-macosx, poprawiona kolejno¶æ opcji budowania ze statycznym Qt (joi)
+* poprawiona endianowo¶æ libgadu (zepsuta przy aktualizacji libgadu)
+  + drobne poprawki w Kadu/GaduProtocol (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
