skrypt robiący bundlea na macu i ikonka
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3371 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiona endianowo¶æ libgadu (zepsuta przy aktualizacji libgadu)
   + drobne poprawki w Kadu/GaduProtocol (joi)
 * modu³y dynamiczne na MacOS X (joi)
+* w varia/scripts dodana wstêpna wersja skryptu tworz±cego bundle'a na
+  MacOS X + ikonka aplikacji (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
