--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³y dynamiczne na MacOS X (joi)
 * w varia/scripts dodana wstêpna wersja skryptu tworz±cego bundle'a na
   MacOS X + ikonka aplikacji (joi)
+* MacOS X: poprawki w kompilacji modu³ów, poprawki skryptu instalacyjnego (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
