--- a/ChangeLog
+++ b/ChangeLog
@@ -63,6 +63,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w varia/scripts dodana wstêpna wersja skryptu tworz±cego bundle'a na
   MacOS X + ikonka aplikacji (joi)
 * MacOS X: poprawki w kompilacji modu³ów, poprawki skryptu instalacyjnego (joi)
+* MacOS X: pozycje okien mia³y warto¶æ y==0, co powodowa³o zas³anianie paska
+  tytu³u okna przez menu systemu (efekt tzw. "braku ramki") (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
