--- a/ChangeLog
+++ b/ChangeLog
@@ -66,6 +66,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * MacOS X: pozycje okien mia³y warto¶æ y==0, co powodowa³o zas³anianie paska
   tytu³u okna przez menu systemu (efekt tzw. "braku ramki") (joi)
 * MacOS X: dodany modu³ macosx_docking + szereg zmian potrzebnych temu modu³owi (joi)
+* obs³uga drag & drop plików na okno chata (vogel/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
