--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   tytu³u okna przez menu systemu (efekt tzw. "braku ramki") (joi)
 * MacOS X: dodany modu³ macosx_docking + szereg zmian potrzebnych temu modu³owi (joi)
 * obs³uga drag & drop plików na okno chata (vogel/joi)
+* MacOS X: poprawki w libgadu dotycz±ce endianowo¶ci i obrazków,
+  poprawne dzia³anie formatowania i obrazków w Kadu (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
