--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * MacOS X: dodany modu³ macosx_docking + szereg zmian potrzebnych temu modu³owi (joi)
 * MacOS X: poprawki w libgadu dotycz±ce endianowo¶ci i obrazków,
   poprawne dzia³anie formatowania i obrazków w Kadu (joi)
+* MacOS X: poprawnie wy¶wietlamy rozmiar przy przesy³aniu pliku,
+           domy¶lna aplikacja do odtwarzania d¼wiêku w ext_sound to playsound,
+           a nie play, poprawki w skrypcie instalacyjnym (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
