macosx: poprawki w budowaniu, rozmiar pliku w dcc, domyślna aplikacja w ext_sound, instalacja playsound
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3393 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -69,6 +69,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga drag & drop plików na okno chata (vogel/joi)
 * MacOS X: poprawki w libgadu dotycz±ce endianowo¶ci i obrazków,
   poprawne dzia³anie formatowania i obrazków w Kadu (joi)
+* MacOS X: poprawnie wy¶wietlamy rozmiar przy przesy³aniu pliku,
+           domy¶lna aplikacja do odtwarzania d¼wiêku w ext_sound to playsound,
+           a nie play, poprawki w skrypcie instalacyjnym (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
