macosx: ustawienia w ~/Library/Kadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3394 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -70,8 +70,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * MacOS X: poprawki w libgadu dotycz±ce endianowo¶ci i obrazków,
   poprawne dzia³anie formatowania i obrazków w Kadu (joi)
 * MacOS X: poprawnie wy¶wietlamy rozmiar przy przesy³aniu pliku,
-           domy¶lna aplikacja do odtwarzania d¼wiêku w ext_sound to playsound,
-           a nie play, poprawki w skrypcie instalacyjnym (joi)
+   domy¶lna aplikacja do odtwarzania d¼wiêku w ext_sound to playsound,
+   a nie play, poprawki w skrypcie instalacyjnym (joi)
+* MacOS X: katalog z ustawieniami to ~/Library/Kadu, a nie ~/.kadu (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
