--- a/ChangeLog
+++ b/ChangeLog
@@ -36,8 +36,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * MacOS X: poprawki w libgadu dotycz±ce endianowo¶ci i obrazków,
   poprawne dzia³anie formatowania i obrazków w Kadu (joi)
 * MacOS X: poprawnie wy¶wietlamy rozmiar przy przesy³aniu pliku,
-           domy¶lna aplikacja do odtwarzania d¼wiêku w ext_sound to playsound,
-           a nie play, poprawki w skrypcie instalacyjnym (joi)
+   domy¶lna aplikacja do odtwarzania d¼wiêku w ext_sound to playsound,
+   a nie play, poprawki w skrypcie instalacyjnym (joi)
+* MacOS X: przywracanie ikony aplikacji po wy³±czeniu programu,
+   opcja "Uruchom zminimalizowany" wy³±czona, ze wzglêdu na problemy z Qt (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
