--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * MacOS X: przywracanie ikony aplikacji po wy³±czeniu programu,
    opcja "Uruchom zminimalizowany" wy³±czona, ze wzglêdu na problemy z Qt (joi)
 * przy dodaniu kontaktu do listy nie pojawia siê on dwukrotnie (joi)
+* poprawione problemy z encjami (&lt; &gt; itp.) w oknie chata (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
