--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
    opcja "Uruchom zminimalizowany" wy³±czona, ze wzglêdu na problemy z Qt (joi)
 * przy dodaniu kontaktu do listy nie pojawia siê on dwukrotnie (joi)
 * poprawione problemy z encjami (&lt; &gt; itp.) w oknie chata (joi)
+* usunieto wycieki pamieci (pawel_p)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
