--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   doprowadziæ do zawieszenia Kadu lub wykonania dowolnego kodu (choæ druga mo¿liwo¶æ
   jest ma³o prawdopodobna) (joi)
 * aktualizacja libgadu do wersji 20050718 (joi)
+* sprawdzanie przy uruchomieniu czy katalog z danymi ma odpowiednie prawa (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
