--- a/ChangeLog
+++ b/ChangeLog
@@ -95,6 +95,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
    - core: pliki *.o l±duj± w podkatalogu obj
 * przy zwyk³ym odtwarzaniu pojedynczego d¼wiêku opró¿niamy bufor urz±dzenia
   (pomaga m.in. na freebsd) (joi)
+* kadu.conf i pozosta³e conf z .kadu nie s± ju¿ u¿ywane. wszystko w kadu.conf.xml (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
