odświeżanie ikony w desktop_docking
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3458 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -100,6 +100,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka instalacji plików nag³ówkowych w przypadku u¿ycia zmiennej DESTDIR (joi)
 * komunikaty dotycz±ce migracji zebrane w jedno okno + ró¿ne poprawki (adrian)
 * poprawki w mechanizmach xml-owych plików konf. - pierwszy start kadu (adrian)
+* poprawione od¶wie¿anie ikony w module desktop_docking (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
