--- a/ChangeLog
+++ b/ChangeLog
@@ -113,6 +113,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
    - dodany mechanizm pozwalaj±cy zmieniaæ kryteria sortowania listy kontaktów
      bez ingerencji w kod
    - ogólne uprotoko³owanie kodu (choæ i tak jest jeszcze duuu¿o pracy przy tym)
+* automatyczne tworzenie / aktualizacja binarnych plików translacji przy
+  kompilacji modu³ów (pan_wojtas/joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
