tworzenie plików *.qm / warningi przy instalacji modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3468 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,10 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.4.2
-+* poprawione od¶wie¿anie ikony w module desktop_docking (joi)
+* poprawione od¶wie¿anie ikony w module desktop_docking (joi)
+* automatyczne tworzenie / aktualizacja binarnych plików translacji przy
+  kompilacji modu³ów (pan_wojtas/joi)
+* usuniêcie komunikatów ostrzegawczych przy instalacji modu³ów (OBenY/joi)
 
 +++ wersja 0.4.1 (19.07.2005)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
