--- a/ChangeLog
+++ b/ChangeLog
@@ -117,6 +117,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kompilacji modu³ów (pan_wojtas/joi)
 * usuniêcie komunikatów ostrzegawczych przy instalacji modu³ów (OBenY/joi)
 * podzielenie plików misc.* i gadu.* na mniejsze (joi)
+* alsa_sound: przed odegraniem / nagraniem próbki sprawdzamy czy karta
+  przyjmie / zwróci j± (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
