usunięty kod kompatybilności z Qt < 3.2, configure sprawdza wersję Qt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3474 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -119,6 +119,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * podzielenie plików misc.* i gadu.* na mniejsze (joi)
 * alsa_sound: przed odegraniem / nagraniem próbki sprawdzamy czy karta
   przyjmie / zwróci j± (joi)
+* usuniêty kod kompatybilno¶ci z Qt < 3.2, configure sprawdza wersjê Qt (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
