poprawki w wykrywaniu ścieżki do Firefoksa na Gentoo
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3475 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -120,6 +120,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * alsa_sound: przed odegraniem / nagraniem próbki sprawdzamy czy karta
   przyjmie / zwróci j± (joi)
 * usuniêty kod kompatybilno¶ci z Qt < 3.2, configure sprawdza wersjê Qt (joi)
+* poprawki w wykrywaniu ¶cie¿ki do Firefoksa na Gentoo (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
