--- a/ChangeLog
+++ b/ChangeLog
@@ -124,6 +124,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zacz±tki klas Protocol i ProtocolsManager (joi)
 * automatyczne tworzenie / aktualizacja binarnych plików translacji przy
   kompilacji ca³ego kadu + make clean usuwa utworzone pliki (adrian)
+* restartowanie Kadu po wyborze jêzyka w wizardzie (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
