--- a/ChangeLog
+++ b/ChangeLog
@@ -126,6 +126,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kompilacji ca³ego kadu + make clean usuwa utworzone pliki (adrian)
 * restartowanie Kadu po wyborze jêzyka w wizardzie (joi)
 * wydzielenie plików toolbar.cpp/h (adrian)
+* poprawiony drobny wyciek pamiêci i losowy segfault przy zakoñczeniu programu
+  w "sprzyjaj±cych" okoliczno¶ciach (anonimowi na li¶cie i w³±czony który¶
+  z filtrów na listê kontaktów) (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
