--- a/ChangeLog
+++ b/ChangeLog
@@ -129,6 +129,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiony drobny wyciek pamiêci i losowy segfault przy zakoñczeniu programu
   w "sprzyjaj±cych" okoliczno¶ciach (anonimowi na li¶cie i w³±czony który¶
   z filtrów na listê kontaktów) (joi)
+* usuniête kilka drobnych wycieków pamiêci (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
