--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kompilacji modu³ów (pan_wojtas/joi)
 * usuniêcie komunikatów ostrzegawczych przy instalacji modu³ów (OBenY/joi)
 * poprawki w wykrywaniu ¶cie¿ki do Firefoksa na Gentoo (joi)
+* usuniête kilka drobnych wycieków pamiêci (joi)
 
 +++ wersja 0.4.1 (19.07.2005)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
