--- a/ChangeLog
+++ b/ChangeLog
@@ -131,6 +131,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z filtrów na listê kontaktów) (joi)
 * usuniête kilka drobnych wycieków pamiêci (joi)
 * na³o¿ona ³atka na default_sms dla bramki EraOmnix (Ron_K/Belegdol)
+* nowe dcc (Ron_K/Vogel)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
