--- a/ChangeLog
+++ b/ChangeLog
@@ -134,6 +134,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowe dcc (Ron_K/Vogel)
 * przyciski w oknie chat przeniesione do toolbarów, pocz±tek edytowalnych toolbarów,
   drag&drop przycisków, pocz±tek koncepcji akcji (adrian)
+* scrolllock i autosend s± akcjami (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
