--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   drag&drop przycisków, pocz±tek koncepcji akcji (adrian)
 * scrolllock i autosend s± akcjami (adrian)
 * zapisywanie klucza w encryption znowu dzia³a (joi)
+* poprawione zapisywanie numeru gg w config_wizard (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
