--- a/THANKS
+++ b/THANKS
@@ -13,5 +13,5 @@ Dariusz "Arcisz" Arciszewski
 Gabor "Kid" Wnuk
 Kuba "Sad Mephisto" Ho³ubinka
 Tomasz "Dorregaray" Rostañski
-
+Manuel Wiblishauser and Jens - kadu_de
 i inni...
