--- a/ChangeLog
+++ b/ChangeLog
@@ -141,6 +141,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wyrzuci³em je z jego zale¿no¶ci (joi)
 * poprawiono wykrywanie libexecinfo (wisnia/pawel_p)
 * przyciski z dolnego lewego paska okna chat zmienione na akcje (adrian)
+* przyspieszenie otwierania i zamykania okna konfiguracji
+	zmiana API rejestracji slotow na otwieranie i zamykanie okna konfiguracji (pawel_p)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
