--- a/ChangeLog
+++ b/ChangeLog
@@ -143,6 +143,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przyciski z dolnego lewego paska okna chat zmienione na akcje (adrian)
 * przyspieszenie otwierania i zamykania okna konfiguracji
 	zmiana API rejestracji slotow na otwieranie i zamykanie okna konfiguracji (pawel_p)
+* wszystkie przyciski poza "wy¶lij" w oknie chat s± akcjami (adrian)
+* zapisywanie konfiguracji danego obszaru dokowania okna chat po dodaniu
+  do niego nowego toolbara (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
