--- a/ChangeLog
+++ b/ChangeLog
@@ -148,6 +148,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   do niego nowego toolbara (adrian)
 * przeniesienie binarnych plików modu³ów do $prefix/lib/kadu/modules
   ró¿ne drobne optymalizacje (joi)
+* mo¿liwo¶æ automatycznego patchowania zewnêtrznych modu³ów poprzez umieszczenie
+  ³aty w katalogu modules/patches/nazwa_modu³u (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
