poprawne zapisywanie uzytkownika i hasla w Erze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3540 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   poprawka sciezek z /usr/share na $(datadir) (pawel_p)
 * poprawiona obs³uga bramki Orange (akasoft/joi)
 * wy³±czenie regenerowania configure/Makefile'i (joi)
+* poprawna zmiana uzytkownika i hasla w konfiguracji dla bramki Ery, 
+	poprawne zapisywanie (pawel_p)
+
 
 +++ wersja 0.4.1 (19.07.2005)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
