--- a/ChangeLog
+++ b/ChangeLog
@@ -154,6 +154,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   u¿ytkownika (Belegdol/joi)
 * oddzielny nick do smsów (Belegdol/joi)
 * poprawiona obs³uga bramki Orange (akasoft/joi)
+* poprawna zmiana uzytkownika i hasla w konfiguracji dla bramki Ery, 
+	poprawne zapisywanie (pawel_p)
+
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
