--- a/ChangeLog
+++ b/ChangeLog
@@ -156,6 +156,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiona obs³uga bramki Orange (akasoft/joi)
 * poprawna zmiana uzytkownika i hasla w konfiguracji dla bramki Ery, 
 	poprawne zapisywanie (pawel_p)
+* wszystkie przyciski w oknie chat s± akcjami (adrian)
 
 
 +++ wersja 0.4.0 (16.04.2005)
