--- a/ChangeLog
+++ b/ChangeLog
@@ -157,6 +157,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawna zmiana uzytkownika i hasla w konfiguracji dla bramki Ery, 
 	poprawne zapisywanie (pawel_p)
 * wszystkie przyciski w oknie chat s± akcjami (adrian)
+* zapisywanie konfiguracji danego obszaru dokowania okna chat po dodaniu lub
+  usuniêciu przycisku, oraz dwóch obszarów po przeci±gniêciu przycisku z jednego
+  toolbara do drugiego (adrian)
 
 
 +++ wersja 0.4.0 (16.04.2005)
