--- a/ChangeLog
+++ b/ChangeLog
@@ -160,7 +160,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zapisywanie konfiguracji danego obszaru dokowania okna chat po dodaniu lub
   usuniêciu przycisku, oraz dwóch obszarów po przeci±gniêciu przycisku z jednego
   toolbara do drugiego (adrian)
-
+* wydzielone pliki action.cpp/h (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
