--- a/AUTHORS
+++ b/AUTHORS
@@ -14,7 +14,7 @@ dokumentacja projektu, opiekun t³umaczeñ
 Pawe³ P³uciennik <pawel_p (at) kadu (dot) net>
 programista
 
-Marcin ¦lusarz <mslusarz (at) alan (dot) umcs (dot) lublin (dot) pl>
+Marcin ¦lusarz <joi (at) kadu (dot) net>
 programista
 
 Micha³ Podsiadlik <michal (at) kadu (dot) net>
