--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@ lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
++++ wersja 0.4.3
+
 +++ wersja 0.4.2 (11.10.2005)
 * poprawione od¶wie¿anie ikony w module desktop_docking (joi)
 * automatyczne tworzenie / aktualizacja binarnych plików translacji przy
