--- a/ChangeLog
+++ b/ChangeLog
@@ -168,6 +168,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przenoszeniu przyciski nie pozostaj± wci¶niête (joi)
 * przy przenoszeniu przycisków miêdzy toolbarami l±duj± one tam gdzie je upu¶cili¶my,
   kolejno¶æ przycisków jest zapamiêtywana (adrian)
+* akcje "dodaj nowego u¿ytkownika", "zmieñ informacje o kontakcie", "konfiguracja",
+  "poka¿ tylko kontakty z opisem", "poka¿ niedostêpnych" (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
