--- a/ChangeLog
+++ b/ChangeLog
@@ -171,6 +171,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * akcje "dodaj nowego u¿ytkownika", "zmieñ informacje o kontakcie", "konfiguracja",
   "poka¿ tylko kontakty z opisem", "poka¿ niedostêpnych" (adrian)
 * poprawiono segfault przy zaniechaniu uruchomienia kopii kadu (pawel_p)
+* wstêpna obs³uga akcji dwustanowych, akcja "wycisz d¼wiêki" (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
