akcja wyslij plik
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3592 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -172,6 +172,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   "poka¿ tylko kontakty z opisem", "poka¿ niedostêpnych" (adrian)
 * poprawiono segfault przy zaniechaniu uruchomienia kopii kadu (pawel_p)
 * wstêpna obs³uga akcji dwustanowych, akcja "wycisz d¼wiêki" (adrian)
+* akcja "wy¶lij plik" (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
