--- a/ChangeLog
+++ b/ChangeLog
@@ -173,6 +173,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiono segfault przy zaniechaniu uruchomienia kopii kadu (pawel_p)
 * wstêpna obs³uga akcji dwustanowych, akcja "wycisz d¼wiêki" (adrian)
 * akcja "wy¶lij plik" (adrian)
+* korekta t³umaczenia na jêzyk niemiecki autorstwa Manuel Wiblishauser and Jens Zettelmeyer (Ron_K)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
