--- a/ChangeLog
+++ b/ChangeLog
@@ -174,6 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wstêpna obs³uga akcji dwustanowych, akcja "wycisz d¼wiêki" (adrian)
 * akcja "wy¶lij plik" (adrian)
 * korekta t³umaczenia na jêzyk niemiecki autorstwa Manuel Wiblishauser and Jens Zettelmeyer (Ron_K)
+* konfigurowalny g³ówny toolbar (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
