poprawka akcji dodaj kontakt, nowa opcja wyslij sms
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3605 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -178,6 +178,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wydzielone pliki dockarea.cpp/h i toolbutton.cpp/h (adrian)
 * dodany do autodownloadu modu³ firewall (joi)
 * uporz±dkowana sprawa domy¶lnej zawarto¶ci toolbarów (adrian)
+* poprawne dzia³anie akcji "dodaj kontakt" dla anonimów, nowa akcja "wy¶lij sms" (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
