--- a/ChangeLog
+++ b/ChangeLog
@@ -179,6 +179,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ firewall (joi)
 * uporz±dkowana sprawa domy¶lnej zawarto¶ci toolbarów (adrian)
 * poprawne dzia³anie akcji "dodaj kontakt" dla anonimów, nowa akcja "wy¶lij sms" (adrian)
+* zapisywanie konfiguracji toolbarów po usuniêciu toolbara, jego przesuniêciu lub
+  przeniesieniu do innego pola dokuj±cego (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
