--- a/ChangeLog
+++ b/ChangeLog
@@ -181,6 +181,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawne dzia³anie akcji "dodaj kontakt" dla anonimów, nowa akcja "wy¶lij sms" (adrian)
 * zapisywanie konfiguracji toolbarów po usuniêciu toolbara, jego przesuniêciu lub
   przeniesieniu do innego pola dokuj±cego (adrian)
+* t³o listy kontaktów mo¿e byæ obrazkiem - ³ata joi'a, przerobiona przez neeo (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
