ignorowanie richtextu od anonimow (adrian)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3616 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.4.3
+* opcja ignorowania formatowania tekstu i obrazków od anonimów, domy¶lnie w³±czona (adrian)
 
 +++ wersja 0.4.2 (11.10.2005)
 * poprawione od¶wie¿anie ikony w module desktop_docking (joi)
